# pyopenfluid-old

./: .gitignore  CMake.in.cmake  CMakeLists.txt  DocStrings.cmake  INSTALL  PreparationDocCMake.cmake  PreparationDocCMake.txt  README  simple_window.py
doc/: CMakeLists.txt  Doxyfile.in  doxygen_example_translator.py  doxygen_stylesheets.css  examples.txt
module/: CMakeLists.txt  PyOFCheckMethods.py  PyOFExceptions.py  PyOpenFLUID.py  PyOpenFLUID.py.in  __init__.py  __init__.py.in  setup.py  setup.py.in
ressource/OPENFLUID.IN.A/: model.fluidx
ressource/project_A/IN/: datastore.fluidx  domain.fluidx  model.fluidx  monitoring.fluidx  run.fluidx
ressource/project_B/IN/: checkgenerators.fluidx  sourcesinject.xml  sourcesinterp.xml
src/: CMakeLists.txt  Convert.cpp  Convert.hpp  PyOpenFLUID.cpp  PyOpenFLUID.hpp  PyOpenFLUIDConstants.hpp.in  PyOpenFLUIDError.cpp  PyOpenFLUIDError.hpp  PythonUtilities.cpp  PythonUtilities.hpp  Utilities.cpp  Utilities.hpp  Wrapper.cpp  Wrapper.cpp.in  Wrapper.hpp
tests/: BaseTest.py  BeginPeriodDate_TEST.py  CMakeLists.txt  DefaultDeltaT_TEST.py  EndPeriodDate_TEST.py  ExtraFunctionsPaths_TEST.py  FunctionsParameter_TEST.py  ModelGlobalParameter_TEST.py  OpenDataSet_TEST.py  OpenDataset_TEST.py  OpenFLUIDConfig.py  OpenProject_TEST.py  PrintSimulationInfo_TEST.py  Results_TEST.py  RunProject_TEST.py  RunSimulation_TEST.py  Simulation_TEST.py  TestOfTestUnit.py  UnitsClasses_TEST.py  UnitsIDs_TEST.py  Version_TEST.py
tests/datas_depending/: CMakeLists.txt  FunctionsParameter_TEST.py  GeneratorParameter_TEST.py  InputData_TEST.py  ObserverParameter_TEST.py  OpenDataset_TEST.py  OpenProject_TEST.py  RunProject_TEST.py  RunSimulation_TEST.py  UnitsClasses_TEST.py  UnitsIDs_TEST.py
tests/scripts/: Attribute_TEST.py  BeginPeriodDate_TEST.py  CMakeLists.txt  Dataset_TEST.py  EndPeriodDate_TEST.py  ExtraObserversPaths_TEST.py  ExtraSimulatorsPaths_TEST.py  FunctionsParameter_TEST.py  Functions_TEST.py  GeneratorParameter_TEST.py  InputData_TEST.py  ModelGlobalParameter_TEST.py  ModelItems_TEST.py  ObserverParameters_TEST.py  OutputDir_TEST.py  Project_TEST.py  Results_TEST.py  RunProject_TEST.py  RunSimulation_TEST.py  SimulatorParameters_TEST.py  Simulators_TEST.py  UnitsFromsTos_TEST.py  UnitsParentsChildren_TEST.py  Units_TEST.py
tests/standalone/: BeginPeriodDate_TEST.py  CMakeLists.txt  Dataset_TEST.py  DefaultDeltaT_TEST.py  EndPeriodDate_TEST.py  ExtraFunctionsPaths_TEST.py  ExtraObserversPaths_TEST.py  FunctionsParameter_TEST.py  Functions_TEST.py  ModelGlobalParameter_TEST.py  ObserverParameter_TEST.py  Observer_TEST.py  OutputDir_TEST.py  PrintSimulationInfo_TEST.py  Project_TEST.py  RunSimulation_TEST.py  UnitsIDsClasses_TEST.py  UnitsParentsChildren_TEST.py  Units_TEST.py  Version_TEST.py
tests/tmp_ressources/: .openfluidprj
tests/ware_and_datas/: CMakeLists.txt  FunctionsParameter_TEST.py  GeneratorParameter_TEST.py  InputData_TEST.py  OpenDataset_TEST.py  UnitsClasses_TEST.py  UnitsIDs_TEST.py
