SET(PY_DIR "${PYTHON_LIB_OUTPUT_PATH}:${PYTHON_LIBDYNLOAD_OUTPUT_PATH}:${CMAKE_CURRENT_SOURCE_DIR}")

ADD_TEST(TestofTestUnit
         ${PYTHON_EXECUTABLE}
         ${CMAKE_CURRENT_SOURCE_DIR}/TestofTestUnit.py)
SET_TESTS_PROPERTIES(TestofTestUnit PROPERTIES
                     WILL_FAIL TRUE
                     ENVIRONMENT "PYTHONPATH=${PY_DIR}")

ADD_SUBDIRECTORY(standalone)

ADD_SUBDIRECTORY(datas_depending)
